# ERD-Stress

./: .gitignore  CMakeLists.txt  README.md
MalwareVaccineGUI/: Form1.Designer.cs  Form1.cs  MalVacForm.Designer.cs  MalVacForm.cs  MalVacForm.resx  MalwareVaccineGUI.csproj  NativeMethods.cs  Program.cs  app.manifest
MalwareVaccineGUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/: bsod_thrower.h  domain.cpp  domain.h  edr_stress.cpp  edr_stress.h  main.cpp  ntdll.h
src/BSODThrower/: bsod_thrower.cpp  bsod_thrower.h
src/MalwareTechniques/: domain.cpp  domain.h  ntdll.cpp  ntdll.h  privilege_escalator.cpp  privilege_escalator.h
src/MalwareVaccine/: application.cpp  application.h  malware_vaccine.cpp  malware_vaccine.h
src/Persistence/: persistence.cpp  persistence.h
src/Ransomware/: ransomware.cpp  ransomware.h
src/StringConverter/: string_converter.cpp  string_converter.h
src/ThreadPool/: thread_pool.h
